--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 body {
-    background-color: mediumaquamarine;
-    color:white;
+    /*background-color: mediumaquamarine;*/
+    color:black;
     font-family: 'Times New Roman', Times, serif;
+    background-image: url("/Users/meghamurthy/Downloads/chevron/chevron.png");
+    
 }
 
 section {
     width:900px;
     margin: 0 auto 100px;
+    
 }
