changed path for bg

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     /*background-color: mediumaquamarine;*/
     color:black;
     font-family: 'Times New Roman', Times, serif;
-    background-image: url("/Users/meghamurthy/Downloads/chevron/chevron.png");
+    background-image: url("chevron.png");
     
 }
 
